--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pixel fight</title>
+</head>
+<body>
+    <canvas id="pixelCanvas" width="500" height="500"></canvas>
+    
+    <script>
+        // Get canvas and context
+        const canvas = document.getElementById('pixelCanvas');
+        const ctx = canvas.getContext('2d');
+    </script>
+    
+</body>
+</html>
